[gd_scene load_steps=5 format=3 uid="uid://bs2xtxubyes3w"]

[ext_resource type="Script" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/LoadingPopup.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://2inhr4yab0i7" path="res://GameDVDCardtridge/TemplateHexagonEngine/MenuPart/GravityHourGlass.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://drpsbtsxbxayu" path="res://fonts/Built/Ubuntu_B_72.tres" id="3"]
[ext_resource type="Theme" uid="uid://4g7pi1nwsoji" path="res://Theme/Perkedel_Tema.tres" id="4"]

[node name="LoadingPopup" type="Popup"]
title = "Loading..."
size = Vector2i(1920, 200)
visible = true
exclusive = true
always_on_top = true
transparent = true
mouse_passthrough = true
theme = ExtResource("4")
script = ExtResource("1")
ProgressWording = "Loading Wordings"
IncompleteLoadingColor = Color(0, 1, 0, 1)
CompleteLoadingColor = Color(0, 0, 1, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpaceContain" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="GravityHourGlass" parent="HBoxContainer/SpaceContain" instance=ExtResource("2")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 200.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("3")
value = 15.0
rounded = true

[node name="LoadingHintWord" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3")
text = "LoadingWord"
clip_text = true

[node name="Timerout" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DotFramePerSec" type="Timer" parent="."]
wait_time = 0.5

[node name="HourglassFramesPerSec" type="Timer" parent="."]
wait_time = 0.01

[connection signal="timeout" from="Timerout" to="." method="_on_Timerout_timeout"]
[connection signal="timeout" from="DotFramePerSec" to="." method="_on_DotFramePerSec_timeout"]
[connection signal="timeout" from="HourglassFramesPerSec" to="." method="_on_HourglassFramesPerSec_timeout"]
